cluster/k8s/agents/haku-workspaces/namespace/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: haku-workspaces
  labels:
    name: haku-workspaces
